{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 8,
  "lineage": "c8ee3434-291c-8f81-8545-e7de98b8f73c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ansible_control_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-019715e0d74f695be",
            "arn": "arn:aws:ec2:ap-south-1:912114962455:instance/i-0cc6c4ea0f0d3e454",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cc6c4ea0f0d3e454",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "hostel-outpass-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a963697e8bfb15d2",
            "private_dns": "ip-172-31-35-159.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.35.159",
            "public_dns": "ec2-43-205-239-66.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.205.239.66",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0763f9dce7cf3fc27",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "hostel-outpass-dev-ansible-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c563ed430c493c60",
            "tags": {
              "Environment": "dev",
              "Name": "ansible-control",
              "Project": "hostel-outpass",
              "Role": "Ansible-Control"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ansible-control",
              "Project": "hostel-outpass",
              "Role": "Ansible-Control"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02ac75f9035e1c4d5"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ansible_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "hostel_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-019715e0d74f695be",
            "arn": "arn:aws:ec2:ap-south-1:912114962455:instance/i-07a2dc3f210afaf94",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07a2dc3f210afaf94",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "hostel-outpass-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0edccc4bb186b6a5d",
            "private_dns": "ip-172-31-38-39.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.38.39",
            "public_dns": "ec2-13-232-221-61.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.232.221.61",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0866eb4a75befb581",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "hostel-outpass-dev-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c563ed430c493c60",
            "tags": {
              "Environment": "dev",
              "Name": "hostel-outpass-dev-ec2",
              "Project": "hostel-outpass"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "hostel-outpass-dev-ec2",
              "Project": "hostel-outpass"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fd80c236a1ddb7da"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.hostel_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ansible_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:912114962455:security-group/sg-02ac75f9035e1c4d5",
            "description": "Security group for Ansible control node (SSH only)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02ac75f9035e1c4d5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "hostel-outpass-dev-ansible-sg",
            "name_prefix": "",
            "owner_id": "912114962455",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "hostel-outpass-dev-ansible-sg",
              "Project": "hostel-outpass",
              "Role": "Ansible-Control"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "hostel-outpass-dev-ansible-sg",
              "Project": "hostel-outpass",
              "Role": "Ansible-Control"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ebe829c54db2e32"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "hostel_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:912114962455:security-group/sg-0fd80c236a1ddb7da",
            "description": "Security group for hostel outpass EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fd80c236a1ddb7da",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Frontend access",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "hostel-outpass-dev-sg",
            "name_prefix": "",
            "owner_id": "912114962455",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "hostel-outpass-dev-sg",
              "Project": "hostel-outpass"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "hostel-outpass-dev-sg",
              "Project": "hostel-outpass"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ebe829c54db2e32"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    }
  ]
}